--- a/bib.bib
+++ b/bib.bib
@@ -8,3 +8,10 @@
     pages = {1686},
     doi = {10.21105/joss.01686},
   }
+@Manual{cumstats,
+    title = {cumstats: Cumulative Descriptive Statistics},
+    author = {Arturo Erdely and Ian Castillo},
+    year = {2017},
+    note = {R package version 1.0},
+    url = {https://CRAN.R-project.org/package=cumstats},
+  }
